package com.example.galgeleg;

public interface IObservable {
}
