package com.example.galgeleg;

import androidx.fragment.app.Fragment;

public interface IObserver  {
}
